compilador/Test/Cases/should-fail/test_propios_Err_Type_2.pcf
let tst : Nat = ifz 0 then 3 else succ